--- a/migration_to_TypeScript/.eslintrc.json
+++ b/migration_to_TypeScript/.eslintrc.json
@@ -1,9 +1,15 @@
 {
-    "plugins": ["prettier", "import"],
-    "extends": [
-        "plugin:prettier/recommended",
-        "prettier"
+    "plugins": [
+        "prettier",
+        "import",
+        "@typescript-eslint"
     ],
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
+        "prettier/@typescript-eslint"
+    ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 2020,
         "sourceType": "module"
@@ -15,7 +21,7 @@
     },
     "rules": {
         "no-debugger": "off",
-        "no-console": 0,
+        "no-console": "off",
         "class-methods-use-this": "off"
     }
 }
