--- a/migration_to_TypeScript/.eslintrc.json
+++ b/migration_to_TypeScript/.eslintrc.json
@@ -22,6 +22,8 @@
     "rules": {
         "no-debugger": "off",
         "no-console": "off",
-        "class-methods-use-this": "off"
+        "class-methods-use-this": "off",
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/no-inferrable-types": "off"
     }
 }
