--- a/migration_to_TypeScript/tsconfig.json
+++ b/migration_to_TypeScript/tsconfig.json
@@ -4,6 +4,7 @@
         "module": "es6",
         "strict": true,
         "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "noImplicitAny": true
     }
 }
