--- a/migration_to_TypeScript/.eslintrc.json
+++ b/migration_to_TypeScript/.eslintrc.json
@@ -7,7 +7,7 @@
     "extends": [
         "plugin:@typescript-eslint/recommended",
         "prettier",
-        "prettier/@typescript-eslint"
+        "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
