--- a/migration_to_TypeScript/package.json
+++ b/migration_to_TypeScript/package.json
@@ -26,11 +26,15 @@
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^3.4.0",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^5.2.0",
         "prettier": "2.2.1",
         "style-loader": "^2.0.0",
+        "svg-url-loader": "^8.0.0",
+        "svgo-loader": "^4.0.0",
         "ts-loader": "^9.4.3",
         "typescript": "^5.1.3",
+        "url-loader": "^4.1.1",
         "webpack": "^5.86.0",
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.15.1",
