--- a/migration_to_TypeScript/package.json
+++ b/migration_to_TypeScript/package.json
@@ -39,5 +39,8 @@
         "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.15.1",
         "webpack-merge": "^5.7.3"
+    },
+    "dependencies": {
+        "simplebar": "^6.2.5"
     }
 }
